Changing primary CTAs up for better flow per customer journey.

--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -17,7 +17,7 @@ current_page.data.date = today.strftime('%B %-d, %Y')
 <section class="section-article">
     <div class="row align-center">
         <div class="columns small-12 medium-10 large-8 text-center group">
-            <%= inline_svg("icon-book-academy", class: "icon-xlarge") %>
+            <%= inline_svg("icon-book-academy", class: "icon-size--xlarge") %>
             <h1 class="headline-2">The Datica Academy</h1>
             <p>HIPAA is complicated, but easily learned. The Datica HIPAA and Interoperability Academy walks you through the intricacies of HIPAA, HL7, and FHIR—from the highest concepts to the deepest details.</p>
             <p>Start with the basics, like why Protected Health Information (PHI) is central to HIPAA, then work your way towards advanced topics like FHIR and HL7.</p>
