--- a/source/products/aws.html.slim
+++ b/source/products/aws.html.slim
@@ -90,4 +90,4 @@ aside#ctaBottom.container-color--dark-grad-blue
       .columns.small-6.large-6.text-right
         = partial "partials/snippets/button", :locals => { :label => "Explore Datica CKS", :title => "Explore the capabilities of the Datica Platform", :url => "/compliance", :button_classes => "button hollow-inverted" }
       .columns.small-6.large-4.text-left
-        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right" }
+        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Datica CKS pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_align => "right" }
