--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -74,7 +74,7 @@ header.main-header
         .column
           = partial "partials/snippets/button", :locals => { :label => "(888) 377-3184", :url => "tel:8883773184", :button_classes => "button hollow-inverted expanded", :icon => "icon-phone" }
 
-  nav.nav.nav-desktop.show-for-large.row data-theme=theme
+  nav.nav.nav-desktop.show-for-large.row.collapse data-theme=theme
     / .top-bar.align-center#nav-desktop
     /   ul.menu
     /     li
