--- a/source/layouts/products.erb
+++ b/source/layouts/products.erb
@@ -16,14 +16,15 @@
         <div class="container-gray-2">
             <%= partial "partials/head/header", :locals => { :style => "light" } %>
         </div>
+        <%#
         <div id="platformTop" class="show-for-large" data-sticky-container>
             <nav class="sticky sticky-nav container-color--white drop text-center full-width" data-sticky data-options="marginTop:0; topAnchor:platformTop">
                 <ul class="menu horizontal align-center">
-                    <%= partial "products/nav-platform" %>
+                    <%#= partial "products/nav-platform" %><%#
                 </ul>
             </nav>
         </div>
-
+        #%>
         <div id="content" class="content">
             <main>
             <%= yield %>
