--- a/source/products/index.html.slim
+++ b/source/products/index.html.slim
@@ -133,12 +133,12 @@ section#setup.section-article.container-gray-2
 // section.section-article.container-gray-11.container-image--fixed(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/31Xr7kD9GUu8gYo6IOISac/b72aedc4ed520f1ad4ae78a24109838f/bg-weave-light.png?w=2200&h=1000&fm=jpg, medium]")
 //   = partial "partials/section-promos/hcms-screenshot"
 
-aside#ctaBottom.container-color--dark-grad-blue
-  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
-    .row.align-center
-      .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3.group <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
-        .menu.button-cluster.align-center
-          = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
-          = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right" }
+/ aside#ctaBottom.container-color--dark-grad-blue
+/   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
+/     .row.align-center
+/       .columns.small-12.medium-10.large-10.text-center
+/         h2.headline-3.group <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
+/         .menu.button-cluster.align-center
+/           = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
+/           = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right" }
 
