--- a/source/products/integration.html.slim
+++ b/source/products/integration.html.slim
@@ -231,14 +231,14 @@ section#faq.section-article.container-gray-12
           dd= Kramdown::Document.new(item["answer"]).to_html
       = partial "partials/snippets/button", :locals => { :label => "Start your integration project", :url => "#cta", :button_classes => "button hollow", :icon => "icon-chevron-up" }
 
-aside#ctaBottom.container-color--dark-grad-blue
-  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
-    .row.align-center
-      .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
-    .row.align-center
-      .columns.small-6.large-4.text-right
-        = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
-      .columns.small-6.large-6.text-left
-        = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_bottom_tech" }
+/ aside#ctaBottom.container-color--dark-grad-blue
+/   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
+/     .row.align-center
+/       .columns.small-12.medium-10.large-10.text-center
+/         h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
+/     .row.align-center
+/       .columns.small-6.large-4.text-right
+/         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
+/       .columns.small-6.large-6.text-left
+/         = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "black", :icon_align => "right", :item_id => "cta_bottom_tech" }
 
