Heavy Netlify.toml redirects

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -29,7 +29,7 @@ asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" r
           h2.headline-4 Datica manages the compliance of your favorite tools, technologies and Platforms.
           p.lead
             | The Datica Platform makes your cloud workloads compliant to the standards of HIPAA, HITRUST, GDPR, and GxP.
-          = partial "partials/snippets/button", :locals => { :label => "Explore the Platform", :url => "/products/", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right" }
+          = partial "partials/snippets/button", :locals => { :label => "Explore the Platform", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right" }
 
         .columns.small-12.medium-6.large-4
           .card.container-color--light-shimmer
