--- a/source/_products/_azure.html.slim
+++ b/source/_products/_azure.html.slim
@@ -88,6 +88,6 @@ aside#ctaBottom.container-color--dark-grad-blue
         h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
     .row.align-center
       .columns.small-6.large-6.text-right
-        = partial "partials/snippets/button", :locals => { :label => "Explore Datica CKS", :url => "/products/", :button_classes => "button hollow-inverted" }
+        = partial "partials/snippets/button", :locals => { :label => "Explore Datica CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow-inverted" }
       .columns.small-6.large-4.text-left
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Datica CKS pricing", :url => "/pricing", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_align => "right" }
