CustoSucc => product page

--- a/source/_products/_deferred-content.html.erb
+++ b/source/_products/_deferred-content.html.erb
@@ -55,7 +55,7 @@
                 <p>Twice HITRUST CSF Certified. Over 1,000 secure audits by customers passed with flying colors.</p>
             </div>
             <div class="card-divider card-divider--flush">
-                <a href="/products/success" title="Read customer stories" class="button hollow hollow-inverted">Read customer stories</a>
+                <a href="/compliant-kubernetes-service/" title="Read customer stories" class="button hollow hollow-inverted">Read customer stories</a>
             </div>
         </div>
     </div>
@@ -80,6 +80,6 @@
         <a href="/platform" title="See how it works" class="button">See how it works</a>
     </div>
     <div class="columns small-12 medium-6 large-5">
-        <a href="/products/success" title="Read customer stories" class="button hollow hollow-inverted">Read customer stories</a>
+        <a href="/compliant-kubernetes-service/" title="Read customer stories" class="button hollow hollow-inverted">Read customer stories</a>
     </div>
 </div>
