--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -33,7 +33,7 @@ priority: "0.9"
         li <strong>Key Infrastructure:</strong> Datica’s public key infrastructure ensures that your data is protected and can only be accessed by those with appropriate permission. You have the option to either provide your own Root CA, or rely on Datica to create and store one for you. Once the Root CA is established, Datica creates an intermediate CA. This intermediate CA is used for generating all cluster specific certs.
     .menu.button-cluster.align-center.z-stack-10
       = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_top_pricing" }
-      = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right", :item_id => "cta_top_success" }
+      = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right", :item_id => "cta_top_success" }
       /= partial "partials/snippets/button", :locals => { :label => "Explore Compliance", :title => "Explore Compliance", :url => "/compliance", :button_classes => "button button--light", :icon => "icon-shield-solid-small", :item_id => "top-tech" }
     .platform-art-1.container-image--top(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/16drHKsNBa6qqEWGim0QmS/cc517223d26050d05659db9f5fab8785/k8-arch-diagram-1-dark.png, medium]")
 
@@ -44,7 +44,7 @@ priority: "0.9"
 //       .logo-cloud.group
 //         - data.views.home.customers.each do |logo|
 //           img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") src="/public/img/customer-logos/sm/#{logo["file"]}.png" /
-//       = partial "partials/snippets/button", :locals => { :label => "Read Customer Success Stories", :title => "View Platform pricing", :url => "/products/success", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right", :item_id => "customers" }
+//       = partial "partials/snippets/button", :locals => { :label => "Read Customer Success Stories", :title => "View Platform pricing", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right", :item_id => "customers" }
 //   .row
 //     .columns.small-12
 //       h3.headline-3.group.text-center Build <strong>Breakthrough</strong> Compliant Apps
@@ -140,5 +140,5 @@ section#setup.section-article.container-gray-2
 /         h2.headline-3.group <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
 /         .menu.button-cluster.align-center
 /           = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
-/           = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/products/success", :button_classes => "button button--light", :icon => "icon-chevron-right" }
+/           = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right" }
 
