🥞 Flattened products url segment, renamed and updated. Test this ☑️

--- a/source/_products/_deferred-content.html.erb
+++ b/source/_products/_deferred-content.html.erb
@@ -42,7 +42,7 @@
                 <p>Compliance is met by mapping all HIPAA controls to services and configurations Datica manages on your behalf, saving you time while de-risking exposure.</p>
             </div>
             <div class="card-divider card-divider--flush">
-                <a href="/platform" title="See how it works" class="button">See how it works</a>
+                <a href="/cks" title="See how it works" class="button">See how it works</a>
             </div>
         </div>
     </div>
@@ -77,7 +77,7 @@
 </div>
 <div class="row align-center">
     <div class="columns small-12 medium-6 large-5">
-        <a href="/platform" title="See how it works" class="button">See how it works</a>
+        <a href="/cks" title="See how it works" class="button">See how it works</a>
     </div>
     <div class="columns small-12 medium-6 large-5">
         <a href="/compliant-kubernetes-service/" title="Read customer stories" class="button hollow hollow-inverted">Read customer stories</a>
