--- a/source/hipaa-compliant-hosting.html.erb
+++ b/source/hipaa-compliant-hosting.html.erb
@@ -17,7 +17,7 @@ layout: basic
                     <h1>HIPAA Compliant Hosting</h1>
                     <h2>Datica is the industry's proven HIPAA compliant hosting platform</h2>
                 </div>
-                <a class="button button--light" href="/platform">Explore capabilities</a>
+                <a class="button button--light" href="/cks">Explore capabilities</a>
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@ layout: basic
                     <h3 class="headline-1">Compliant Cloud</h3>
                     <p>Learn more about Datica's HIPAA compliant hosting offering</p>
                 </div>
-                <a class="button button--light" href="/platform">Explore capabilities</a>
+                <a class="button button--light" href="/cks">Explore capabilities</a>
             </div>
         </div>
     </div>
