--- a/source/services/index.html.erb
+++ b/source/services/index.html.erb
@@ -23,7 +23,7 @@ priority: "0.9"
         <div class="columns small-12 large-10 text-center">
             <h1 class="headline-2 text-center">Datica Services</h1>
             <h2 class="headline-3">Get to market faster, beat the competition, and meet compliance requirements&mdash;all with fewer engineering resources.</h2>
-            <p class="lead">Through the <a href="/platform" title="See how the Datica Platform can help">Datica Platform</a>, our team of cloud engineers, integration and compliance experts can help you <a href="#consulting" title="">assess</a> your business problems, ensure <a href="#compliance" title="">complete compliance</a> on the cloud, <a href="#integration" title="">integrate</a> with any system, and even <a href="#data_migration">migrate</a> your data to a new, efficient, and cost-effective cloud platform.</p>
+            <p class="lead">Through the <a href="/cks" title="See how Datica can help">Datica Compliant Kubernetes Service</a>, our team of cloud engineers, integration and compliance experts can help you <a href="#consulting" title="">assess</a> your business problems, ensure <a href="#compliance" title="">complete compliance</a> on the cloud, <a href="#integration" title="">integrate</a> with any system, and even <a href="#data_migration">migrate</a> your data to a new, efficient, and cost-effective cloud platform.</p>
         </div>
     </div>
 </section>
