--- a/source/hipaa-compliant-web-hosting.html.erb
+++ b/source/hipaa-compliant-web-hosting.html.erb
@@ -17,7 +17,7 @@ layout: basic
                     <h1>HIPAA Compliant Web Hosting</h1>
                     <h2>The best HIPAA compliant web hosting provider is also healthcare's digital health platform of choice</h2>
                 </div>
-                <a class="button button--light" href="/platform">Explore Datica Compliant Cloud</a>
+                <a class="button button--light" href="/cks">Explore Datica Compliant Cloud</a>
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@ layout: basic
                     <h3 class="headline-1">Compliant Cloud</h3>
                     <p>Learn more about Datica's HIPAA compliant web hosting product</p>
                 </div>
-                <a class="button button--light" href="/platform">Explore capabilities</a>
+                <a class="button button--light" href="/cks">Explore capabilities</a>
             </div>
         </div>
     </div>
