Some partial calls related to platform have been fixed.

--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -14,7 +14,7 @@ priority: "0.9"
 ---
 - current_page.data.share_image = image_share_platform
 
-= partial "products/platform-icons"
+= partial "partials/snippets/platform-icons"
 
 section#compliance-top.container-color--dark-alt style=("background-color: #23272C")
   .container-image--center(data-interchange="[/public/img/art/compliance-bg.svg, small]")
