--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -23,18 +23,69 @@ asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" r
   .container-image--center(data-interchange="[/public/img/art/home-header-art-hexagons-anim.svg, small]")
     = partial "partials/head/header", :locals => { :style => "light" }
     section.section-article
-      .row.align-center.group
+      .row.align-center.group--sm
         .columns.small-12.medium-10.large-10.text-center
           h1.headline-1 The Industry Cloud For Digital Health
       .row.align-center
-        .columns.small-12.medium-6.large-6
-          / <sup>&reg;</sup>
+        .columns.small-12.medium-6.large-5
           h2.headline-4.text-light.group--sm We provide you with <a class="link--yellow" href="/compliance" title="Datica Compliance Story">compliance</a> tools to <a class="link--yellow" href="/compliant-kubernetes-service" title="Datica Compliant Kubernetes® Service">deploy cloud-native workloads</a> and <a class="link--yellow" href="/compliant-managed-integration" title="Datica Compliant Managed Integration">integrate with EHRs</a>.
           = partial "partials/snippets/button", :locals => { :label => "Learn About Datica CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-top", :data_track_group => "cks" }
         .columns.small-12.medium-6.large-4
-          .card.container-color--light-shimmer
+          .card.container-color--light-shimmer.pad--sm
             = partial("partials/ctas/card-schedule-demo")
 .strip-bright
+section.section-article.container-gray-12
+  .row.align-center.text-center
+    .columns.small-12.large-10
+      h2.headline-3 The burdens of compliance slow down your business
+  .row.align-center
+    .columns.small-12.medium-6
+      h3.headline-5 Shared Responsibility is still your responsibility
+      .row
+        .columns.small-6
+          img src="" alt="compact SR diagram"
+        .columns.small-6
+          p.text-small When you deploy your workloads onto cloud service providers like AWS, Microsoft Azure, and Google Cloud, you are always responsible for a major portion of the compliance burden, predominantly at the operating system level. Addressing the gap is not rocket science, but is tedious and expensive. More importantly, it gives a reason for compliance officers to say "No" to using the cloud.
+    .columns.small-12.medium-6
+      h3.headline-5 Interoperable data required interoperable infrastructure
+      .row
+        .columns.small-6
+          img src="" alt="you <> EHRs"
+        .columns.small-6
+          p.text-small Modern health IT is an ecosystem of solutions, which means digital health products must have a strategy to integrate with existing EHRs or other systems of record like PACs. Integrating with legacy on-premises systems is not easy when your architecture is on the cloud. Compliance, security, privacy, VPNs, and 1980s protocols are requirements for true interoperability.
+
+section.section-article.container-color--dark-grad-green
+  .row.align-center
+    .columns.small-12.text-center
+      h2.headline-3.group Your playbook for digital health success
+  .row.align-center.row--card-grid
+    .columns.small-12.medium-6.large-5
+      .card.drop
+        .card-section
+          h3.headline-5 Compliant Kubernetes Service (CKS)
+          p
+            | Datica CKS bridges security and compliance with Kubernetes<sup>&reg;</sup> to offer a complete, enterprise cloud-native solution for regulated industries. We deploy a managed Kubernetes cluster on your cloud account which is then configured to a perfectly compliant state every five minutes.
+          ul.list-check
+            li The only fully compliant Kubernetes service out there
+            li HITRUST CSF v9.1 Certified, GDPR Compliant
+            li Immediate AWS availability, Azure and GCP coming soon
+            li Compatible with managed services like AWS RDS
+        .card-divider.card-divider--flush
+          = partial "partials/snippets/button", :locals => { :label => "Explore Datica CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button button-inline", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "product-cks", :data_track_group => "cks" }
+    .columns.small-12.medium-6.large-5
+      .card.drop
+        .card-section
+          h3.headline-5 Compliant Managed Integration (CMI)
+          p
+            | Datica CMI solves the entire process of integration, enabling real-time data exchange with EHRs. We do this by focusing on a required blend of expertise, services, open source, and addressing infrastructure compliance and security concerns.
+          ul.list-check
+            li Translates hard-to-use data standards to REST APIs
+            li You own the transformations, meaning zero lock-in
+            li Vendor app store compatible
+            li Predictable pricing
+        .card-divider.card-divider--flush
+          = partial "partials/snippets/button", :locals => { :label => "Explore Datica CMI", :url => "/compliant-managed-integration/", :button_classes => "button button-inline", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "product-cmi", :data_track_group => "cmi" }
+
 section.section-article
   .row.align-center.text-center
     .columns.small-12.large-9
@@ -45,7 +96,7 @@ section.section-article
           - logo.logoSize == "xlarge" ? logopad = "pad--sm" : nil
           .column
             img alt="#{logo["name"]}" class=logopad src="#{logo["fileUrl"]}" /
-      = partial "partials/snippets/button", :locals => { :label => "Platform Compliance Overview", :title => "Read more", :url => "/compliance/", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right", :item_id => "home", :data_track_group => "compliance" }
+      = partial "partials/snippets/button", :locals => { :label => "Datica Compliance Story", :title => "Read more", :url => "/compliance/", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right", :item_id => "logo-cloud", :data_track_group => "compliance" }
 
 = partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
 section.section-article
@@ -80,9 +131,7 @@ aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
-        h2.headline-3 <strong>End-to-end compliance</strong> with Kubernetes<sup>&reg;</sup> is here.
-    .row.align-center
-      .columns.small-6.large-4.text-right
+        h2.headline-3 The Industry Cloud for Digital Health is here.
+    .menu.button-group.align-center
         = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing/", :button_classes => "button hollow-inverted" }
-      .columns.small-6.large-6.text-left
-        = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right" }
+        = partial "partials/snippets/button", :locals => { :label => "Learn About Datica CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-bottom", :data_track_group => "cks" }
