--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -16,75 +16,38 @@ priority: "0.9"
 
 .container-color--dark-grad-blue
   section#platform-top.section-article.position-relative(style="overflow: hidden;")
-    .row
-      .columns.small-12
-        h1.headline-1 Compliance + Kubernetes<sup>&reg;</sup> = Datica
+    / .row
+    /   .columns.small-12
+    /     h1.headline-1 Compliant Kubernetes<sup>&reg;</sup> Service is how regulated industries work with cloud native architectures.
     .row.group
       .columns.small-12.medium-7.large-6.xlarge-6
-        p.lead= current_page.data.summary
+        h2.headline-3 Compliant Kubernetes Service is how regulated industries work with cloud native architectures.
 
-        h2.headline-3 The Datica Cloud Compliance Management System (CCMS)
-        p The CCMS gives users visibility and control over the compliance of their Kubernetes<sup>&reg;</sup> cluster:
-        ul.bullet-outside.bullets-chevron
-        li <strong>Initial State:</strong> Compliance in the cloud is built on a foundation of secure, logical configurations. Without a proper foundation, the proverbial compliance house fails. When Datica deploys a Kubernetes<sup>&reg;</sup> cluster, we do so with configuration automation and security best practices.
-        li <strong>Compliance Artifacts:</strong> Once the proper compliance state is in place, the next step to ensuring continuous compliance is collecting data as compliance artifacts. Datica’s compliance deployments (logging, monitoring, IDS, etc.) report and log compliance artifacts to an encrypted block storage object. The CCMS then uses this data to ensure continuous compliance.
-        li <strong>Compliance Engine:</strong> The core value of the CCMS is that we are continuously ensuring the complete compliance of both your cluster, and the underlying infrastructure that it resides on. We do this by comparing the running state with the expected initial compliance state. The compliance engine checks state every 5 minutes.
-        li <strong>Management:</strong> Datica manages the compliance state of your cluster through intrusion detection review and remediation; vulnerability scanning management, remediation and proaction; and compliance reporting for HITRUST, SOC 2, GDPR and more.
-        li <strong>Key Infrastructure:</strong> Datica’s public key infrastructure ensures that your data is protected and can only be accessed by those with appropriate permission. You have the option to either provide your own Root CA, or rely on Datica to create and store one for you. Once the Root CA is established, Datica creates an intermediate CA. This intermediate CA is used for generating all cluster specific certs.
     .menu.button-cluster.align-center.z-stack-10
-      = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_top_pricing" }
-      = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right", :item_id => "cta_top_success" }
+      = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "#cta", :button_classes => "button button--light", :icon => "icon-chevron-down", :item_id => "cta_top_success" }
       /= partial "partials/snippets/button", :locals => { :label => "Explore Compliance", :title => "Explore Compliance", :url => "/compliance", :button_classes => "button button--light", :icon => "icon-shield-solid-small", :item_id => "top-tech" }
     .platform-art-1.container-image--top(data-interchange="[https://images.ctfassets.net/189dvqdsjh46/16drHKsNBa6qqEWGim0QmS/cc517223d26050d05659db9f5fab8785/k8-arch-diagram-1-dark.png, medium]")
 
-// section#platform-customers.section-article.container-gray-12
-//   #companies.row.align-center.group--2x
-//     .columns.small-12.large-12.text-center
-//       h3.headline-3 <strong>World-class companies</strong> trust Datica
-//       .logo-cloud.group
-//         - data.views.home.customers.each do |logo|
-//           img alt="#{logo["name"]}" class=("logo-cloud--item logo-size--#{logo['logoSize']}") src="/public/img/customer-logos/sm/#{logo["file"]}.png" /
-//       = partial "partials/snippets/button", :locals => { :label => "Read Customer Success Stories", :title => "View Platform pricing", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow", :icon => "icon-chevron-right", :icon_color => "blue", :icon_align => "right", :item_id => "customers" }
-//   .row
-//     .columns.small-12
-//       h3.headline-3.group.text-center Build <strong>Breakthrough</strong> Compliant Apps
-//   .row
-//     .columns.small-12.medium-6
-//       <script src="https://fast.wistia.com/embed/medias/djywh7kkgd.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><div class="wistia_embed wistia_async_djywh7kkgd seo=false videoFoam=true" style="height:100%;width:100%">&nbsp;</div></div></div>
-//     .columns.small-12.medium-6
-//       .group
-//         blockquote.quote--serif
-//           ruby:
-//             quote_id = "5fDbO1XJ1CAEWAEIoiO6mS"
-//             the_quote = data.site.quotes[quote_id]
-//           = Kramdown::Document.new(the_quote["quote_body"]).to_html
-//         = partial("partials/snippets/person", :locals => { :p => the_quote.customer, :company => the_quote.customer.company_name } )
+
 
 section#setup.section-article.container-gray-12
   .row.align-center
     .columns.small-12
       .row.align-center
         .columns.small-12.medium-10.large-8.group.text-center
-          h3.headline-5.spaced-out Leverage the power of Kubernetes
-          h2.headline-2 Compliant and HITRUST certified Kubernetes<sup>&reg;</sup> in 10 minutes
-          p.lead Datica automatically configures your underlying infrastructure, installs and configures a highly available Kubernetes<sup>&reg;</sup> cluster, and connects that cluster to Datica’s Cloud Compliance Management System — all in 10 minutes.
+          h3.headline-5.spaced-out The Datica promise brought to a Kubernetes service
+          h2.headline-2 Datica bridges security and compliance with Kubernetes to offer an enterprise-grade cloud native solution.
+          p.lead If you're working within a regulated industry like healthcare, you have almost zero options when it comes to using Kubernetes — either you manage the control plane, the operating system and the underlying infrastructure to maintain the flexibility required for compliance, or you risk falling out of compliance by using an existing managed service. Datica changes all of that.
       .row.align-center.small-up-1.medium-up-2.large-up-4.group
         .column
-          h4.headline-4.hide-for-medium 1. Setup
+          / h4.headline-4.hide-for-medium 1. Setup
           img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/yc639CSDwka8aAs4Uo0kW/cb3458e6089ae9bd7312389acc374f9b/setup-1.png?w=450" alt="Setup"
-          p First we collect information about your cloud provider, required infrastructure to run your deployments, and how redundant you want the master cluster to be (HA by default).
+          p CKS is a compliant managed Kubernetes service for regulated industries. In addition to managing the cluster control plane, CKS also configures the underlying operating system, configures the underlying instances — and installs, configures and manages a set of deployments required to achieve compliance.
         .column
-          h4.headline-4.hide-for-medium 2. Installation
+          / h4.headline-4.hide-for-medium 2. Installation
           img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4jQ7VNUSIMUIS2aIKQWEOO/bb83fc6ec264ddd12f3b29410fe784c0/setup-2.png?w=450" alt="Installation"
-          p With the required information, Datica installs a new Kubernetes<sup>&reg;</sup> cluster into your account (or into Datica’s account, your choice).
-        .column
-          h4.headline-4.hide-for-medium 3. Verification
-          img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/3MKy2SJ2dWUQIWy8yKEK4C/85c4531dfb35b5a9a6c008939ede8f74/setup-3.png?w=450" alt="Verification"
-          p Once the cluster is installed, and all system-level configurations are set, the Platform will begin continuously pulling the cluster’s running state and compare that to the required compliance state.
-        .column
-          h4.headline-4.hide-for-medium 4. Done!
-          img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4GOXaSvKfu6SeaMmmw2k6i/241b016e86591f5b871a192c4583b48e/setup-4.png?w=450" alt="Done!"
-          p Start shipping! Your newly deployed Kubernetes<sup>&reg;</sup> cluster is ready for use. Scale and manage infrastructure at will. The Datica Compliance Management System has your back.
+          p Deployments include logging, monitoring, intrusion detection, antivirus software, and more. In addition to the technical configuration, Datica assumes the liability for the complete stack within our BAA, something not available or possible with any other managed Kubernetes offering. CKS delivers a compliant managed Kubernetes service that functions like any other Kubernetes cluster, but one that comes pre-configured for compliance and security out of the box.
+
       .row.align-center
         .columns.small-12.medium-8.large-5.xlarge-4
           .card.drop
@@ -141,4 +104,8 @@ section#setup.section-article.container-gray-2
 /         .menu.button-cluster.align-center
 /           = partial "partials/snippets/button", :locals => { :label => "View Pricing", :title => "View Platform pricing", :url => "/pricing", :button_classes => "button hollow-inverted", :item_id => "cta_bottom_pricing" }
 /           = partial "partials/snippets/button", :locals => { :label => "Hear from our customers", :url => "/compliant-kubernetes-service/", :button_classes => "button button--light", :icon => "icon-chevron-right" }
-
+section.section-article.container-gray-11
+  .row.align-center
+    .columns.small-12
+      h2.headline-2 Customer Success
+  = partial "partials/section-promos/aws-mlh-video", :locals => { :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS", :container_color => "container-gray-11" }
